--- a/index.html
+++ b/index.html
@@ -6,13 +6,72 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Chakra+Petch:ital,wght@0,300;0,400;0,500;1,300&family=Heebo:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&family=IBM+Plex+Mono:wght@500;700&family=M+PLUS+Rounded+1c:wght@700;800&family=Varela+Round&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/82e1d6b1a3.js" crossorigin="anonymous"></script>
 
 </head>
+
+<header>
+    <nav class="navbar navbar-expand-md navbar-custom fixed-top m-3">
+        <a class="navbar-brand pl-3" href="#">
+            <div class="nav-logo">
+                <img src="assets/portfolio-coin.png" height="30" class="d-inline-block align-top pr-1" alt="" id="logo">
+                <h2 id="plogo">Everyday</h2><h3 id="plogo">Portfolio</h3>
+            </div>
+        </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
+          <span class="navbar-toggler-icon">
+            <img src="assets/Menu-Toggle.png" height="25" class="d-inline-block align-center">
+          </span>
+        </button>
+      
+        <div class="collapse navbar-collapse navbar-collapse-md" id=".navbar-collapse">
+          <ul class="navbar-nav ml-auto px-3">
+            <li class="nav-item px-3 py-0">
+              <a class="nav-link" href="work.html">Today</a>
+            </li>
+            <li class="nav-item px-3 py-0">
+              <a class="nav-link" href="resume.html">Portfolio</a>
+            </li>
+            <li class="nav-item px-3 py-0">
+                <a class="nav-link" href="connect.html">Profile</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+
+</header>
+
 <body style="background-color: #010212">
-    <img src="assets/portfolio-coin.png">
+
+<section class="page-heading">
+    <h1>Today</h1>
+</section>
+
+<section class="gain-loss">
+    <h2>Gain/Loss</h2>
+    <p id="digits">$13,073.12</p>
+    <p id="digits">(+7.2%)</p>
+</section>
+
+<section class="top-movers">
+
+</section>
+
+<section class="top-losers">
+
+</section>
+
+<section class="todays-news">
+
+</section>
+    
 </body>
+
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+
 </html>
