--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 
     <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@300;400;500;700&family=IBM+Plex+Mono:wght@500;700&family=M+PLUS+Rounded+1c:wght@700;800&family=Varela+Round&display=swap" rel="stylesheet">    
+    <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Heebo:wght@300;400;500;700&family=IBM+Plex+Mono:wght@500;700&family=M+PLUS+Rounded+1c:wght@700;800&family=Varela+Round&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="css/main.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <script src="https://kit.fontawesome.com/82e1d6b1a3.js" crossorigin="anonymous"></script>
@@ -58,7 +58,7 @@
 <section class="gain-loss">
     <h2>Gain/Loss</h2>
     <p id="digits">$13,073.12</p>
-    <p id="digits">7.2%</p>
+    <p id="digits">(+7.2%)</p>
 </section>
 </div>
 
