"Add Position" modal and mobile nav edits

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a class="navbar-brand pl-3" href="#">
             <div class="nav-logo">
                 <img src="assets/portfolio-coin.png" height="30" class="d-inline-block align-top pr-1" alt="" id="logo">
-                <h2 id="plogo">Everyday</h2><h3 id="plogo">Portfolio</h3>
+                <h2 id="plogo">Everyday</h2><h2 class="logo-light" id="plogo">Portfolio</h2>
             </div>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse">
