Portfolio structure, news modules, & modal tweaks

--- a/portfolio.html
+++ b/portfolio.html
@@ -15,7 +15,7 @@
 
 <header>
     <nav class="navbar navbar-expand-md navbar-custom fixed-top m-3">
-        <a class="navbar-brand pl-3" href="#">
+        <a class="navbar-brand pl-3" href="index.html">
             <div class="nav-logo">
                 <img src="assets/portfolio-coin.png" height="30" class="d-inline-block align-top pr-1" alt="" id="logo">
                 <h2 id="plogo">Everyday</h2><h2 class="logo-light" id="plogo">Portfolio</h2>
@@ -83,23 +83,97 @@
             </div>
           </div>
         </div>
+
         <div class="position-name">
           <h3>Name</h3>
           <input class="form-control form-control-lg" type="text" id="position-form" placeholder="Enter symbol / name">
         </div>
+
         <div class="position-size">
           <h3>Size of Holding</h3>
           <input class="form-control form-control-lg" type="text" id="position-form" placeholder="Enter number">
         </div>
+
+        <div class="estimated-value">
+          <h2>Estimated Value</h2>
+          <p id="digits">$3,467.04</p>
+        </div>
         
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
         <button type="button" class="btn" id="button-submit">Submit</button>
       </div>
     </div>
   </div>
 </div>
+
+<section class="portfolio-content">
+  <div class="holding-section">
+    <h3>Stocks</h3>
+    <div class="holding-group">
+      <div class="holding-item">
+        <h4 class="holding-symbol">AAPL</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+      <div class="holding-item">
+        <h4 class="holding-symbol">TSLA</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+      <div class="holding-item">
+        <h4 class="holding-symbol">BA	&nbsp;	&nbsp;</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+      <div class="holding-item">
+        <h4 class="holding-symbol">AMD</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+    </div>
+  </div>
+
+  <div class="holding-section">
+    <h3>ETFs</h3>
+    <div class="holding-group">
+      <div class="holding-item">
+        <h4 class="holding-symbol">BND &nbsp;</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+      <div class="holding-item">
+        <h4 class="holding-symbol">VXUS</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+      <div class="holding-item">
+        <h4 class="holding-symbol">VTI &nbsp; &nbsp;</h4>
+        <p class="holding-amount">13 shares</p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+    </div>
+  </div>
+
+  <div class="holding-section">
+    <h3>Other Assets</h3>
+    <div class="holding-group">
+      <div class="holding-item">
+        <h4 class="holding-symbol">Home</h4>
+        <p class="holding-amount"></p>
+        <i class="fas fa-chevron-circle-right see-more"></i>
+      </div>
+
+    </div>
+  </div>
+
+</section>
 
 
     
