--- a/profile.html
+++ b/profile.html
@@ -15,7 +15,7 @@
 
 <header>
     <nav class="navbar navbar-expand-md navbar-custom fixed-top m-3">
-        <a class="navbar-brand pl-3" href="#">
+        <a class="navbar-brand pl-3" href="index.html">
             <div class="nav-logo">
                 <img src="assets/portfolio-coin.png" height="30" class="d-inline-block align-top pr-1" alt="" id="logo">
                 <h2 id="plogo">Everyday</h2><h3 id="plogo">Portfolio</h3>
