--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <div class="collapse navbar-collapse navbar-collapse-md" id=".navbar-collapse">
           <ul class="navbar-nav ml-auto px-3">
             <li class="nav-item px-3 py-0">
-              <a class="nav-link" href="#">Today</a>
+              <a class="nav-link today" href="#">Today</a>
             </li>
             <li class="nav-item px-3 py-0">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
+              <a class="nav-link portfolio" href="portfolio.html">Portfolio</a>
             </li>
             <li class="nav-item px-3 py-0">
-                <a class="nav-link" href="profile.html">Profile</a>
+                <a class="nav-link profile" href="profile.html">Profile</a>
             </li>
           </ul>
         </div>
