Profile - rough structure

--- a/profile.html
+++ b/profile.html
@@ -52,6 +52,57 @@
     <h1>Profile</h1>
 </section>
 
+<section class="profile-header">
+  <div>
+    <!-- profile pic placeholder -->
+  </div>
+
+  <div>
+    <h4>Seth Mitchell</h4>
+    <p>sayotte.mitchell@gmail.com</p>
+  </div>
+</section>
+
+<section class="profile-general">
+  <div>
+    <h3>General</h3>
+  </div>
+  <div>
+    <div>
+      <h4>Name</h4>
+      <p>Seth Mitchell</p>
+      <h4>Email</h4>
+      <p>sayotte.mitchell@gmail.com</p>
+    </div>
+    <div>
+      <h4>Notifications</h4>
+      <!-- toggle placeholder -->
+      <h4>Light/Dark Mode</h4>
+      <!-- toggle placeholder -->
+    </div>
+  </div>
+</section>
+
+<section class="profile-security">
+  <div>
+    <div>
+      <h4>Password</h4>
+    </div>
+    <div>
+      <!-- field & button placeholder -->
+    </div>
+    <div>
+      <h4>Last Login</h4>
+    </div>
+    <div>
+      <!-- field & button placeholder -->
+    </div>
+  </div>
+</section>
+
+<section class="logout-button">
+  <!-- logout button placeholder -->
+</section>
 
     
 </body>
