--- a/profile.html
+++ b/profile.html
@@ -77,8 +77,10 @@
     <div>
       <h4>Notifications</h4>
       <!-- toggle placeholder -->
+      <!-- will be green -->
       <h4>Light/Dark Mode</h4>
       <!-- toggle placeholder -->
+      <!-- will be light grey/dark grey -->
     </div>
   </div>
 </section>
